# sakura

./: .env_demo  .gitignore  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt  settings_sample.ini
.github/workflows/: codeql-analysis.yml
main/: development.py  production.py  settings.py  urls.py  views.py  wsgi.py
sakura/: admin.py  apps.py  asgi.py  bot.py  config.py  decorator.py  development.py  models.py  production.py  sakuraBot.py  settings.py  urls.py  utils.py  views.py  wsgi.py
sakura/BotCMD/: anime.py  basic.py  moderation.py  self_role.py  welcome.py
sakura/BotEvents/: __init__.py  events.py  on_guild.py  on_member.py
sakura/BotMics/: api.py  bot_db.py  botutils.py  image.py
sakura/authentication/: admin.py  apps.py  auth.py  decorator.py  urls.py  views.py
sakura/bot/: config.py
sakura/dashboard/: apps.py  views.py
sakura/help/: admin.py  apps.py  models.py  views.py
sakura/selfrole/: admin.py  apps.py  models.py
sakura/server/: admin.py  apps.py  bot.py  models.py  views.py
sakura/templates/: dashboard.html  new_dashboard.html  old_server.html  welcome.html
sakura/welcome/: admin.py  apps.py  models.py  views.py
sakuralogin/: apps.py  auth.py  models.py  views.py
sakuralogin/migrations/: 0001_initial.py  0002_auto_20210509_1242.py  0003_alter_discorduser_avatar.py
static/css/: dashboard.css  profile.css
static/js/: custom.js  dark.js  dashboard.js
templates/: background.css  base.html  command.html  new_base.html
templates/accounts/: index.html
templates/dashboard/: new_dashboard.html  old_dashboard.html
(+32 files in other folders)
